Bug 499763 - [pmi] Broken layout for "Build Technologies"
Remove non-spec table style and field style

Change build-failure to build-failed (as per what is set by module)

Change build-in_progress to build-in-progress

Add Media rule style to bugzilla field to display more mobile friendly

Remove set font size on build description

--- a/stylesheets/projects/fields/bugzilla-field.less
+++ b/stylesheets/projects/fields/bugzilla-field.less
@@ -52,3 +52,14 @@ div.block-content > div.field-name-field-project-bugzilla {
     }
   }
 }
+
+@media screen and (max-width: 490px) {
+  div.block-content > div.field-name-field-project-bugzilla {
+    height : 145px;
+    ul {
+      li {
+        width: 50%;
+      }
+    }
+  }
+}
